--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,10 @@ on:
 jobs:
 
   build:
+  
+    strategy:
+      matrix:
+        configuration: [Debug, Release]
 
     runs-on: windows-latest
 
@@ -16,11 +20,15 @@ jobs:
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v1.0.2
       
-    - name: Setup NuGet
-      uses: NuGet/setup-nuget@v1.0.2
-     
-    - name: Restore NuGet Packages
-      run: nuget restore VirtualDesktopTimecodeServer.sln
+    - name: Restore the application
+      run: msbuild VirtualDesktopTimecodeServer.sln /t:Restore /p:Configuration=$env:Configuration
+      env:
+        Configuration: ${{ matrix.configuration }}
 
     - name: Create the app package
-      run: msbuild VirtualDesktopTimecodeServer.sln /p:Configuration=Release
+      run: msbuild VirtualDesktopTimecodeServer.sln /p:Configuration=$env:Configuration
+      env:
+        Appx_Bundle: Always
+        Appx_Bundle_Platforms: x64
+        Appx_Package_Build_Mode: StoreUpload
+        Configuration: ${{ matrix.configuration }}
