--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,10 @@ jobs:
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v1.0.2
       
+    - name: Get Application Version
+      id: get_version
+      uses: battila7/get-version-action@v2
+        
     - name: Restore the application
       run: msbuild $env:Solution_Name /t:Restore /p:Configuration=$env:Configuration
       env:
@@ -38,11 +42,20 @@ jobs:
         Appx_Package_Build_Mode: StoreUpload
         Configuration: ${{ matrix.configuration }}
     
-    - name: Upload Artifact
+    - name: Upload Artifact 1
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         file: bin\Release\net471\VirtualDesktopTimecodeServer.dll
-        asset_name: VirtualDesktopTimecodeServer.dll
+        asset_name: VirtualDesktopTimecodeServer_${{ steps.get_version.outputs.version }}.dll
+        tag: ${{ github.ref }}
+        overwrite: true
+        
+    - name: Upload Artifact 2
+      uses: svenstaro/upload-release-action@v2
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: inject.bat
+        asset_name: inject_${{ steps.get_version.outputs.version }}.bat
         tag: ${{ github.ref }}
         overwrite: true
